# gpag

./: .gitignore  README.md  pyproject.toml
docs/: 101_formulaic_alphas.md  101_formulaic_alphas_layout.txt  Glossary.md  operators.json  worldquant-brain-mass-alpha-generation.md
docs/courses-transcribe/: 01-What is an Alpha.md  02-What is Market-Neutral Investing.md  04-Price Volume Data.md  05-Types of Alpha Ideas.md  06-Company Fundamentals.md  07-Sentiment Data.md  08-Options Data.md  09-Momentum Alphas.md  10-Seasonality.md  11-Holding Periods.md  12-Why Use Delayed Data.md  13-What Does a Delay-0 Alpha Look Like.md  14-How to Diversify Alphas.md  15-Diversity.md  16-What are Factor Risks.md  17-Why Eliminate Risk Exposure.md  18-How Do You Make Risk Neutral Alphas.md  19-How Quants Can Partner with AI.md  21-Creating a Quant Alpha.md  22-How Good is Your Alpha_ A Metrics-Based Approach.md  23-Alpha Examples by Data Category_ Part 1.md  24-Alpha Examples by Data Category_ Part 2.md  25-Alpha Examples by Idea Type.md  26-Alphas by Holding Frequencies and Delays.md  27-The Power of Diversity.md  28-Risk Management.md  29-Advanced Research Ideas.md  30-Learn2Quant and BRAIN.md  31-WorldQuant BRAIN_ Sign Up Today.md
docs/docs/Create Alphas/: How to choose the Simulation Settings.md  Simulate your first Alpha.md  Test Period.md  ⭐ How BRAIN works.md
docs/docs/Discover BRAIN/: 10 Steps to Start on BRAIN.md  (+6 more)
docs/tutorial/: 1.md  2.md  3.md  4.md  5.md
scripts/: monitor_nvidia_smi.py
src/: main.py
src/config/: __init__.py  defaults.py
src/modules/: __init__.py
(+25 files in other folders)
