[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "gpag"
version = "1.0.0"
description = "Genetic pipeline for alpha generation and submission."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "requests>=2.31.0",
  "torch>=2.11.0",
  "tqdm>=4.66.0",
]

[project.scripts]
gpag = "modules.main:main"

[dependency-groups]
dev = [
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modules"]

[tool.ruff]
line-length = 100
target-version = "py310"
